@@ -25,6 +25,7 @@ var GFutils =
 
     var request = new XMLHttpRequest();
     request.open('GET', 'http://www.gamefaqs.com/boards/settings.php');
+    GFlib.thirdPartyCookieFix(request);
     request.onreadystatechange = function()
     {
       if (request.readyState == 4)
@@ -87,7 +88,8 @@ var GFutils =
   {
     if (button) button.setAttribute('disabled', true);
     var request = new XMLHttpRequest();
-    request.open('GET', 'http://www.gamefaqs.com/boards/settings.php', true);
+    request.open('GET', 'http://www.gamefaqs.com/boards/settings.php');
+    GFlib.thirdPartyCookieFix(request);
     request.onreadystatechange = function()
     {
       if (request.readyState == 4)
@@ -114,6 +116,7 @@ var GFutils =
 
         var postRequest = new XMLHttpRequest();
         postRequest.open('POST', 'http://www.gamefaqs.com' + action);
+        GFlib.thirdPartyCookieFix(postRequest);
         postRequest.onreadystatechange = function()
         {
           if (postRequest.readyState == 4)
@@ -159,6 +162,7 @@ var GFutils =
 
     var request = new XMLHttpRequest();
     request.open('GET', 'http://www.gamefaqs.com/boards/sigquote.php');
+    GFlib.thirdPartyCookieFix(request);
     request.onreadystatechange = function()
     {
       if (request.readyState == 4)
