@@ -3,6 +3,8 @@
     * Fix manual topic pagination
     * Show favorite boards in context menu and sidebar
     * Scroll to appropriate location when filtering/unfiltering
+    * Workaround Firefox 3 bug that breaks QuickPost and other features when
+      third-party cookies are blocked
 
 2008-11-01:
     * version 0.6.7
